Создано с помощью Colaboratory

--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMhcQREl+G+xjcgru0WK70v",
+      "authorship_tag": "ABX9TyPdxiwQCHpR9/xkHZDYxWLI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -265,13 +265,41 @@
     {
       "cell_type": "code",
       "source": [
-        "a=int(input())"
+        "a=float(input(\"Введите первое число(не равное нулю): \"))\n",
+        "b=float(input(\"Введите второе число: \"))\n",
+        "c=float(input(\"Введите третье число: \"))\n",
+        "D = (b**2)-4*(a * c)\n",
+        "if (D>0) :\n",
+        "  x1 = (-b + D**0.5)/(2*a)\n",
+        "  x2 = (-b - D**0.5)/(2*a)\n",
+        "  print(round(x1,2))\n",
+        "  print(round(x2,2))\n",
+        "elif (D==0):\n",
+        "  x= -b/(2*a)\n",
+        "  print(round(x,2))\n",
+        "else :\n",
+        "  print(\"Решений нет\")"
       ],
       "metadata": {
-        "id": "L7QbTX4pAFSp"
+        "id": "L7QbTX4pAFSp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2052cde2-1e09-4a81-8fc6-9d674638a268"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Введите первое число: 12\n",
+            "Введите второе число: 2\n",
+            "Введите третье число: 10\n",
+            "Решений нет\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
